dev: circleci update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=Open-MBEE_openapi-graph-extractor
 sonar.organization=openmbee
 sonar.language=TypeScript
-sonar.javascript.lcov.reportPaths=cov_profile.lcov
+sonar.javascript.lcov.reportPaths=./cov_profile.lcov
