--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
             name: Deno Test and Coverage Report
             command: |
               deno cache --reload --lock=deno.lock cli.ts 
-              deno test --coverage=cov_profile
-              deno coverage cov_profile --lcov --output=cov_profile.lcov
+              deno test --coverage=coverage
+              deno coverage coverage --lcov --output=lcov.info
       - persist_to_workspace:
             root: /home/circleci/
             paths:
@@ -31,7 +31,7 @@ jobs:
           path: /home/circleci/openapi-graph-extractor
 workflows:
     version: 2
-    test:
+    test_and_scan:
       jobs:
         - test:
             post-steps:
