--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
               - openapi-graph-extractor
       - store_artifacts:
           path: /home/circleci/openapi-graph-extractor
+      - store_test_results:
+          path: /home/circleci/openapi-graph-extractor/test-results
 workflows:
     version: 2
     test_and_scan:
