feat(SonarCloud): added source and test directory to config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=Open-MBEE_openapi-graph-extractor
 sonar.organization=openmbee
 sonar.language=TypeScript
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.tests=tests/
+sonar.sources=src/
