--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,11 @@ jobs:
             root: /home/circleci/
             paths:
               - openapi-graph-extractor
+              - openapi-graph-extractor/tests/test-result
       - store_artifacts:
           path: /home/circleci/openapi-graph-extractor
       - store_test_results:
-          path: /home/circleci/openapi-graph-extractor/test-results
+          path: /home/circleci/openapi-graph-extractor/tests/test-results
 workflows:
     version: 2
     test_and_scan:
