--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
               deno cache --reload --lock=deno.lock cli.ts 
               deno test --coverage=coverage
               deno coverage coverage --lcov --output=coverage/lcov.info
+              deno test --junit-path=./report.xml
       - persist_to_workspace:
             root: /home/circleci/
             paths:
@@ -30,7 +31,7 @@ jobs:
       - store_artifacts:
           path: /home/circleci/openapi-graph-extractor
       - store_test_results:
-          path: /home/circleci/openapi-graph-extractor/tests/unit
+          path: report
 workflows:
     version: 2
     test_and_scan:
