--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - store_artifacts:
           path: /home/circleci/openapi-graph-extractor
       - store_test_results:
-          path: report
+          path: .
 workflows:
     version: 2
     test_and_scan:
